Update and rename 说明.txt to 说明.md

--- a/说明.md
+++ b/说明.md
@@ -1,4 +1,5 @@
-1.创建容器
+## 1.创建容器
+````
 docker run -d -ti \
   -v /tmp/.X11-unix:/tmp/.X11-unix \
   -e DISPLAY=unix$DISPLAY \
@@ -6,12 +7,16 @@ docker run -d -ti \
   -e GDK_DPI_SCALE \
   --name wine \
   rdvde/wine
-
-2.运行容器
+````
+## 2.运行容器
+````
 docker exec -ti wine /bin/bash
+````
 或者
+````
 docker restart wine && docker exec -ti wine /bin/bash
-3.执行需要运行的应用
+````
+## 3.执行需要运行的应用
 QQ
 TIM
 WeChat
@@ -19,5 +24,7 @@ BaiduNetDisk
 ThunderSpeed
 Foxmail
 
-提示No protocol specified错误，请在主机运行：
+## 提示No protocol specified错误，请在主机运行：
+````
 xhost +
+````
