--- a/说明.md
+++ b/说明.md
@@ -2,6 +2,8 @@
 ````
 docker run -d -ti \
   -v /tmp/.X11-unix:/tmp/.X11-unix \
+  -v $HOME/Downloads:/home/user/Downloads \
+  -v $HOME/wine:/home/ubuntu/.deepinwine
   -e DISPLAY=unix$DISPLAY \
   -e GDK_SCALE \
   -e GDK_DPI_SCALE \
