--- a/说明.md
+++ b/说明.md
@@ -1,4 +1,4 @@
-## 1.创建容器
+## 1.1运行容器
 ````
 docker run -d -ti \
   -v /tmp/.X11-unix:/tmp/.X11-unix \
@@ -10,7 +10,19 @@ docker run -d -ti \
   --name wine \
   rdvde/wine
 ````
-## 2.运行容器
+## 2.1 后台运行容器
+````
+docker run -d -ti \
+  -v /tmp/.X11-unix:/tmp/.X11-unix \
+  -v $HOME/Downloads:/home/user/Downloads \
+  -v $HOME/wine:/home/ubuntu/.deepinwine
+  -e DISPLAY=unix$DISPLAY \
+  -e GDK_SCALE \
+  -e GDK_DPI_SCALE \
+  --name wine \
+  rdvde/wine
+````
+#### 2.2 启动命令窗口
 ````
 docker exec -ti wine /bin/bash
 ````
@@ -18,7 +30,7 @@ docker exec -ti wine /bin/bash
 ````
 docker restart wine && docker exec -ti wine /bin/bash
 ````
-## 3.执行需要运行的应用
+## 1.2＆2.3 执行需要运行的应用
 QQ
 TIM
 WeChat
