--- a/说明.md
+++ b/说明.md
@@ -1,9 +1,12 @@
 ## 1.1运行容器
+
+### 需要提前创建所需要的文件夹，不然会导致解压时权限不正确，无法运行
+#### $HOME/wine 你当前用户目录下新建wine目录
 ````
-docker run -d -ti \
+docker run --rm -ti \
   -v /tmp/.X11-unix:/tmp/.X11-unix \
-  -v $HOME/Downloads:/home/user/Downloads \
-  -v $HOME/wine:/home/ubuntu/.deepinwine
+  -v $HOME/Downloads:/home/ubuntu/Downloads \
+  -v $HOME/wine:/home/ubuntu \
   -e DISPLAY=unix$DISPLAY \
   -e GDK_SCALE \
   -e GDK_DPI_SCALE \
@@ -14,8 +17,8 @@ docker run -d -ti \
 ````
 docker run -d -ti \
   -v /tmp/.X11-unix:/tmp/.X11-unix \
-  -v $HOME/Downloads:/home/user/Downloads \
-  -v $HOME/wine:/home/ubuntu/.deepinwine
+  -v $HOME/Downloads:/home/ubuntu/Downloads \
+  -v $HOME/wine:/home/ubuntu \
   -e DISPLAY=unix$DISPLAY \
   -e GDK_SCALE \
   -e GDK_DPI_SCALE \
