--- a/说明.md
+++ b/说明.md
@@ -1,6 +1,6 @@
 ## 1.1运行容器
 
-### 需要提前创建所需要的文件夹，不然会导致解压时权限不正确，无法运行
+#### 需要提前创建所需要的文件夹，不然会导致解压时权限不正确，无法运行
 #### $HOME/wine 你当前用户目录下新建wine目录
 ````
 docker run --rm -ti \
@@ -45,3 +45,5 @@ Foxmail
 ````
 xhost +
 ````
+# 原作者
+[github](https://github.com/RokasUrbelis/docker-wine-linux)
